@@ -1,6 +1,7 @@
 1.9.3:
 * Client: NetRouteInv() was only routing txs to peers which don't use "feefilter"
 * Wallet: decode transaction also shows WTxID now
+* Lib: calculates weight of blocks and checks it against "btc.MAX_BLOCK_WEIGHT"
 
 1.9.2 - 2017-09-30
 * Minor performance improvements in "lib/secp256k1"
